[package]
name = "openmls_basic_credential"
version = "0.4.0"
authors = ["OpenMLS Authors"]
edition = "2021"
description = "A Basic Credential implementation for OpenMLS"
license = "MIT"
documentation = "https://docs.rs/openmls_basic_credential"
repository = "https://github.com/openmls/openmls/tree/main/basic_credential"
readme = "README.md"

[dependencies]
openmls_traits = { workspace = true }
tls_codec = { workspace = true }
serde = "1.0"

# Rust Crypto
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
p256 = { version = "0.13" }
rand = "0.8"

# Post-quantum ML-DSA-65 support
libcrux-ml-dsa = { git = "https://github.com/cryspen/libcrux", rev = "655d4c90e24103f67ebf598895d847ead157fcf4", package = "libcrux-ml-dsa", features = ["mldsa65"] }

[features]
clonable = []   # Make the keys clonable
test-utils = [] # Only use for tests!
